Download terminato. Versione definitiva che permette di scaricare statistiche della stagione 22_23 con anche tutti i match (compresi i non giocati)

--- a/download.ipynb
+++ b/download.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,26 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "download = DownloadDati(\"Serie A\") \n",
-    "download.connect(\"https://fbref.com/it/comp/11/2021-2022/Statistiche-di-Serie-A-2021-2022\")"
+    "download.connect(\"https://fbref.com/it/comp/11/Statistiche-di-Serie-A\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download.get_teams()"
+    "download.get_teams_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +78,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download.save_matches()"
+    "download.save_matches('files/Serie A/22_23 statistics.csv')\n",
+    "download.save_championship_games('files/Serie A/22_23 championship_matches.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team1</th>\n",
+       "      <th>date</th>\n",
+       "      <th>matchday</th>\n",
+       "      <th>stadium</th>\n",
+       "      <th>result</th>\n",
+       "      <th>goals</th>\n",
+       "      <th>team2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Atalanta</td>\n",
+       "      <td>21-08-2022</td>\n",
+       "      <td>Giornata n. 2</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Atalanta</td>\n",
+       "      <td>01-09-2022</td>\n",
+       "      <td>Giornata n. 4</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>V</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Torino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Atalanta</td>\n",
+       "      <td>11-09-2022</td>\n",
+       "      <td>Giornata n. 6</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Cremonese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Atalanta</td>\n",
+       "      <td>02-10-2022</td>\n",
+       "      <td>Giornata n. 8</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>V</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Fiorentina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Atalanta</td>\n",
+       "      <td>15-10-2022</td>\n",
+       "      <td>Giornata n. 10</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>V</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Sassuolo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Udinese</td>\n",
+       "      <td>23-04-2023</td>\n",
+       "      <td>Giornata n. 31</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cremonese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Udinese</td>\n",
+       "      <td>03-05-2023</td>\n",
+       "      <td>Giornata n. 33</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Napoli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Udinese</td>\n",
+       "      <td>07-05-2023</td>\n",
+       "      <td>Giornata n. 34</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sampdoria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Udinese</td>\n",
+       "      <td>21-05-2023</td>\n",
+       "      <td>Giornata n. 36</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lazio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Udinese</td>\n",
+       "      <td>04-06-2023</td>\n",
+       "      <td>Giornata n. 38</td>\n",
+       "      <td>Casa</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Juventus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>380 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       team1        date        matchday stadium result  goals       team2\n",
+       "1   Atalanta  21-08-2022   Giornata n. 2    Casa      N    1.0       Milan\n",
+       "3   Atalanta  01-09-2022   Giornata n. 4    Casa      V    3.0      Torino\n",
+       "5   Atalanta  11-09-2022   Giornata n. 6    Casa      N    1.0   Cremonese\n",
+       "7   Atalanta  02-10-2022   Giornata n. 8    Casa      V    1.0  Fiorentina\n",
+       "9   Atalanta  15-10-2022  Giornata n. 10    Casa      V    2.0    Sassuolo\n",
+       "..       ...         ...             ...     ...    ...    ...         ...\n",
+       "32   Udinese  23-04-2023  Giornata n. 31    Casa    nan    NaN   Cremonese\n",
+       "34   Udinese  03-05-2023  Giornata n. 33    Casa    nan    NaN      Napoli\n",
+       "35   Udinese  07-05-2023  Giornata n. 34    Casa    nan    NaN   Sampdoria\n",
+       "37   Udinese  21-05-2023  Giornata n. 36    Casa    nan    NaN       Lazio\n",
+       "39   Udinese  04-06-2023  Giornata n. 38    Casa    nan    NaN    Juventus\n",
+       "\n",
+       "[380 rows x 7 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "path = 'files/Serie A/22_23 championship_matches.csv'\n",
+    "download.championship_games.rename(columns=download.rename_fields, inplace=True)\n",
+    "download.championship_games = download.championship_games[download.championship_games.stadium=='Casa']\n",
+    "display(download.championship_games)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team1</th>\n",
+       "      <th>date</th>\n",
+       "      <th>matchday</th>\n",
+       "      <th>result</th>\n",
+       "      <th>team2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Monza</td>\n",
+       "      <td>2022-08-13</td>\n",
+       "      <td>Giornata n. 1</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Torino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sampdoria</td>\n",
+       "      <td>2022-08-13</td>\n",
+       "      <td>Giornata n. 1</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Atalanta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lecce</td>\n",
+       "      <td>2022-08-13</td>\n",
+       "      <td>Giornata n. 1</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Inter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Milan</td>\n",
+       "      <td>2022-08-13</td>\n",
+       "      <td>Giornata n. 1</td>\n",
+       "      <td>V</td>\n",
+       "      <td>Udinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lazio</td>\n",
+       "      <td>2022-08-14</td>\n",
+       "      <td>Giornata n. 1</td>\n",
+       "      <td>V</td>\n",
+       "      <td>Bologna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Sassuolo</td>\n",
+       "      <td>2023-06-04</td>\n",
+       "      <td>Giornata n. 38</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Fiorentina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Roma</td>\n",
+       "      <td>2023-06-04</td>\n",
+       "      <td>Giornata n. 38</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Spezia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Napoli</td>\n",
+       "      <td>2023-06-04</td>\n",
+       "      <td>Giornata n. 38</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Sampdoria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Milan</td>\n",
+       "      <td>2023-06-04</td>\n",
+       "      <td>Giornata n. 38</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Hellas Verona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Udinese</td>\n",
+       "      <td>2023-06-04</td>\n",
+       "      <td>Giornata n. 38</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Juventus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>380 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        team1       date        matchday result          team2\n",
+       "1       Monza 2022-08-13   Giornata n. 1      P         Torino\n",
+       "1   Sampdoria 2022-08-13   Giornata n. 1      P       Atalanta\n",
+       "1       Lecce 2022-08-13   Giornata n. 1      P          Inter\n",
+       "0       Milan 2022-08-13   Giornata n. 1      V        Udinese\n",
+       "0       Lazio 2022-08-14   Giornata n. 1      V        Bologna\n",
+       "..        ...        ...             ...    ...            ...\n",
+       "38   Sassuolo 2023-06-04  Giornata n. 38    nan     Fiorentina\n",
+       "43       Roma 2023-06-04  Giornata n. 38    nan         Spezia\n",
+       "43     Napoli 2023-06-04  Giornata n. 38    nan      Sampdoria\n",
+       "44      Milan 2023-06-04  Giornata n. 38    nan  Hellas Verona\n",
+       "39    Udinese 2023-06-04  Giornata n. 38    nan       Juventus\n",
+       "\n",
+       "[380 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "download.championship_games['date'] = pd.to_datetime(download.championship_games['date'], format='%d-%m-%Y') #devo convertire la data altrimenti mi dà problemi quando la lego         \n",
+    "download.championship_games.sort_values(by=[\"date\"], inplace=True)\n",
+    "download.championship_games.drop(columns=['stadium', 'goals'])\n",
+    "download.championship_games.to_csv(path) #matches for each team"
    ]
   }
  ],
