--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,42 +41,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "ma.diff_dataset['date'] = pd.to_datetime(ma.diff_dataset['date'], format='%Y-%m-%d') \n",
-    "\n",
-    "for i, match_value in ma.diff_dataset.iterrows():\n",
-    "    season = match_value.season.split('-')[1]\n",
-    "    team1, team2 = (0, 0)\n",
-    "    seasons_to_check = [x for x in sorted(ranking.all_previous_seasons_matches.keys()) if x <= int(season)]\n",
-    "    \n",
-    "    #per il rank ho bisogno dei match nelle stagioni precedenti, quindi scansiono ogni stagione e sommo i rank\n",
-    "    for season_to_check in seasons_to_check: \n",
-    "        matches = ranking.all_previous_seasons_matches[season_to_check] \n",
-    "        teams = matches.Casa.unique()\n",
-    "        if match_value.home not in teams and match_value.away not in teams:\n",
-    "            team1, team2 = team1, team2 \n",
-    "        elif match_value.home not in teams and match_value.away in teams:\n",
-    "            team1, team2 = team1, team2 + 2\n",
-    "        elif match_value.home in teams and match_value.away not in teams:\n",
-    "            team1, team2 = team1 + 2, team2 \n",
-    "        else:\n",
-    "            v1, v2 = ranking.get_result(matches, match_value.home, match_value.away, match_value.date)\n",
-    "    \n",
-    "            team1 += v1\n",
-    "            team2 += v2\n",
-    "            \n",
-    "    ma.diff_dataset.at[i, 'rank_h'] = team1\n",
-    "    ma.diff_dataset.at[i, 'rank_a'] = team2"
+    "Per vedere se funziona il ranking prendo tutte le partite tra due squadre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ma.diff_dataset[((ma.diff_dataset.home=='Inter')&(ma.diff_dataset.away=='Genoa'))|((ma.diff_dataset.home=='Genoa')&(ma.diff_dataset.away=='Inter'))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per vedere se funziona la media, prendo le prima 4 partite della Juventus e controllo nel file relativo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -120,210 +109,112 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>140</th>\n",
-       "      <td>Juventus</td>\n",
-       "      <td>2018-12-07</td>\n",
-       "      <td>V</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>Inter</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>-2.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-5.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>330</th>\n",
-       "      <td>Inter</td>\n",
-       "      <td>2019-04-27</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Juventus</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>14.4</td>\n",
-       "      <td>-4.6</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>447</th>\n",
-       "      <td>Inter</td>\n",
-       "      <td>2019-10-06</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Chievo</td>\n",
+       "      <td>2018-08-18</td>\n",
        "      <td>P</td>\n",
-       "      <td>-0.2</td>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>Juventus</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>-2.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>2019-2020</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>630</th>\n",
-       "      <td>Juventus</td>\n",
-       "      <td>2020-03-08</td>\n",
-       "      <td>V</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Inter</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>2019-2020</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-44.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>935</th>\n",
-       "      <td>Inter</td>\n",
-       "      <td>2021-01-17</td>\n",
+       "      <th>8</th>\n",
+       "      <td>Juventus</td>\n",
+       "      <td>2018-08-25</td>\n",
        "      <td>V</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>Juventus</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-0.8</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>-5.6</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>Lazio</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>2020-2021</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2018-2019</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1120</th>\n",
-       "      <td>Juventus</td>\n",
-       "      <td>2021-05-15</td>\n",
-       "      <td>V</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>Inter</td>\n",
-       "      <td>-2.4</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>8.4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2020-2021</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1227</th>\n",
-       "      <td>Inter</td>\n",
-       "      <td>2021-10-24</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Juventus</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>-3.2</td>\n",
-       "      <td>-1.6</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2021-2022</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1440</th>\n",
-       "      <td>Juventus</td>\n",
-       "      <td>2022-04-03</td>\n",
+       "      <th>19</th>\n",
+       "      <td>Parma</td>\n",
+       "      <td>2018-09-01</td>\n",
        "      <td>P</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>Inter</td>\n",
-       "      <td>-9.8</td>\n",
-       "      <td>-2.8</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-7.8</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>-0.2</td>\n",
+       "      <td>-1.500000</td>\n",
+       "      <td>Juventus</td>\n",
+       "      <td>-15.5</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-20.500000</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2018-2019</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2021-2022</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Juventus</td>\n",
+       "      <td>2018-09-16</td>\n",
+       "      <td>V</td>\n",
+       "      <td>-0.333333</td>\n",
+       "      <td>Sassuolo</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-0.666667</td>\n",
+       "      <td>-0.666667</td>\n",
+       "      <td>16.666667</td>\n",
+       "      <td>-8.333333</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.333333</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          home       date result  goals      away  total_shots  \\\n",
-       "140   Juventus 2018-12-07      V   -0.4     Inter         -3.0   \n",
-       "330      Inter 2019-04-27      N    0.0  Juventus          2.2   \n",
-       "447      Inter 2019-10-06      P   -0.2  Juventus         -0.2   \n",
-       "630   Juventus 2020-03-08      V    0.0     Inter          0.2   \n",
-       "935      Inter 2021-01-17      V   -0.2  Juventus         -1.0   \n",
-       "1120  Juventus 2021-05-15      V   -0.6     Inter         -2.4   \n",
-       "1227     Inter 2021-10-24      N    1.0  Juventus          2.6   \n",
-       "1440  Juventus 2022-04-03      P    0.6     Inter         -9.8   \n",
+       "        home       date result     goals      away  total_shots  \\\n",
+       "0     Chievo 2018-08-18      P -1.000000  Juventus        -23.0   \n",
+       "8   Juventus 2018-08-25      V  2.000000     Lazio         17.0   \n",
+       "19     Parma 2018-09-01      P -1.500000  Juventus        -15.5   \n",
+       "34  Juventus 2018-09-16      V -0.333333  Sassuolo         12.0   \n",
        "\n",
-       "      shots_on_target  goals_on_penalty  total_penalties  \\\n",
-       "140              -2.2               0.2              0.2   \n",
-       "330               1.0               0.2              0.2   \n",
-       "447               0.4               0.0              0.0   \n",
-       "630              -1.0               0.2              0.2   \n",
-       "935              -0.8               0.2              0.4   \n",
-       "1120             -1.2               0.0              0.0   \n",
-       "1227              0.6               0.2              0.4   \n",
-       "1440             -2.8               0.2              0.2   \n",
+       "    shots_on_target  goals_on_penalty  total_penalties  percentage_possession  \\\n",
+       "0              -9.0          1.000000         1.000000             -44.000000   \n",
+       "8               8.0          0.000000         0.000000              36.000000   \n",
+       "19             -6.0          0.000000         0.000000             -20.500000   \n",
+       "34              3.0         -0.666667        -0.666667              16.666667   \n",
        "\n",
-       "      percentage_possession  fouls  yellow_cards  red_cards     season  \\\n",
-       "140                    -5.8    3.0          -0.4       -0.2  2018-2019   \n",
-       "330                    14.4   -4.6          -0.4        0.0  2018-2019   \n",
-       "447                    -0.6   -2.2           0.2        0.2  2019-2020   \n",
-       "630                     8.6    2.8           0.0       -0.2  2019-2020   \n",
-       "935                    -5.6    0.0          -0.2       -0.2  2020-2021   \n",
-       "1120                   -0.4    8.4           1.0        0.0  2020-2021   \n",
-       "1227                   -3.2   -1.6           0.8        0.0  2021-2022   \n",
-       "1440                   -7.8   -0.4          -0.2        0.0  2021-2022   \n",
-       "\n",
-       "      rank_h  rank_a  \n",
-       "140      0.0     0.0  \n",
-       "330      0.0     1.0  \n",
-       "447      0.0     1.0  \n",
-       "630      2.0     0.0  \n",
-       "935      0.0     3.0  \n",
-       "1120     3.0     1.0  \n",
-       "1227     1.0     4.0  \n",
-       "1440     4.0     1.0  "
+       "       fouls  yellow_cards  red_cards     season  rank_h  rank_a  \n",
+       "0   3.000000           2.0   0.000000  2018-2019     0.0     0.0  \n",
+       "8  -1.000000           0.0   0.000000  2018-2019     0.0     0.0  \n",
+       "19  6.500000           0.5   0.000000  2018-2019     0.0     0.0  \n",
+       "34 -8.333333          -1.0  -0.333333  2018-2019     0.0     0.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ma.diff_dataset[((ma.diff_dataset.home=='Inter')&(ma.diff_dataset.away=='Juventus'))|((ma.diff_dataset.home=='Juventus')&(ma.diff_dataset.away=='Inter'))]"
+    "ma.diff_dataset[((ma.diff_dataset.home=='Juventus')|(ma.diff_dataset.away=='Juventus'))][:4]"
    ]
   }
  ],
