aggiunta descrizione completed_dataset

--- a/completed_dataset.ipynb
+++ b/completed_dataset.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge statistiche e predizioni\n",
+    "Questo dataset contiene tutti i dati relativi alla differenza delle medie (degli ultimi 5 match) delle due squadre e le predizioni (il testo descrittivo) di football prediction con anche l'etichetta di predizione."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,17 +31,6 @@
     "\n",
     "ta = FootballPredictions(matches)\n",
     "ta.read_cleaned_predictions(utils.cleaned_matches_description)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ta.recovery_games()\n",
-    "#ta.matches_not_found()\n",
-    "#ta.fix_dates(utils.cleaned_matches_description)"
    ]
   },
   {
@@ -64,44 +61,6 @@
    "outputs": [],
    "source": [
     "dataset.to_csv(utils.completed_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1240it [00:36, 34.33it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tqdm import tqdm\n",
-    "missing_matches = pd.DataFrame()\n",
-    "\n",
-    "for k, j in tqdm(matches.iterrows()):\n",
-    "    find = False\n",
-    "    for i, d in dataset.iterrows():\n",
-    "        if (d.home.lower() == j.home.lower()) & (d.away.lower() == j.away.lower()) & (d.date == j.date):\n",
-    "            find = True\n",
-    "            break\n",
-    "    if find!=True:\n",
-    "        missing_matches = missing_matches.append(j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k, j in dataset.iterrows():\n",
-    "    if len(dataset[(dataset.home==j.home) & (dataset.away==j.away) & (dataset.date==j.date)])>1:\n",
-    "        print(j.home, j.away)"
    ]
   }
  ],
