--- a/text analysis.ipynb
+++ b/text analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "mt = MyTokenizer(pd.read_csv(utils.completed_dataset, index_col=0))\n",
-    "mt.feature_normalization()\n",
+    "#mt.feature_normalization()\n",
     "mt.clean_text()\n",
-    "X_train, X_test, y_train, y_test = mt.set_bigram_and_get_sets()"
+    "X_train, X_test, y_train, y_test = mt.set_bigram_and_get_sets()\n",
+    "mt.save_vectorizer(utils.vectorizer)"
    ]
   },
   {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,15 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9338842975206612\n",
+      "0.9380165289256198\n",
+      "0.9421487603305785\n"
+     ]
+    }
+   ],
    "source": [
     "import sklearn.metrics as mtr\n",
     "E = []\n",
     "\n",
     "accuracy = 0\n",
-    "while(accuracy < 0.938):\n",
+    "while(accuracy < 0.94):\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "    analysis = pd.DataFrame()\n",
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
