sistemazione modello finale. Finitura predizione partite

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -176,13 +176,7 @@
    "source": [
     "from sklearn import preprocessing\n",
     "\n",
-    "old.drop(columns=['description', 'date', 'season'], inplace=True)\n",
-    "#columns = [x for x in old.columns if ((x != 'result') & (x != 'home') & (x != 'away') & (x != 'prediction'))]\n",
-    "\"\"\"\n",
-    "for col in columns:\n",
-    "    x_array = old[col]\n",
-    "    normalized_arr = preprocessing.normalize([x_array])\n",
-    "    old[col] = normalized_arr\"\"\""
+    "old.drop(columns=['description', 'date', 'season'], inplace=True)"
    ]
   },
   {
@@ -196,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,21 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5041322314049587\n",
-      "0.5330578512396694\n",
-      "0.5413223140495868\n",
-      "0.5454545454545454\n",
-      "0.5495867768595041\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sklearn.metrics as mtr\n",
     "\n",
@@ -255,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
