--- a/next_matches.ipynb
+++ b/next_matches.ipynb
@@ -11,20 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "from analysis import MatchAnalysis\n",
     "import pandas as pd\n",
     "import util_strings as utils\n",
-    "from ranking import Ranking\n",
+    "from end.ranking import Ranking\n",
     "from football_predictions import FootballPredictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  3.99it/s]\n",
-      "100%|██████████| 4/4 [00:02<00:00,  1.99it/s]\n"
+      "100%|██████████| 4/4 [00:01<00:00,  2.56it/s]\n",
+      "100%|██████████| 4/4 [00:02<00:00,  1.66it/s]\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,9 @@
     "\n",
     "matches[float_features_and_avg] = matches[float_features_and_avg].astype(float)\n",
     "\n",
-    "ma.diff_dataset = matches\n",
+    "label = {'N': 0, 'V': 1, 'P':2}\n",
+    "\n",
+    "ma.diff_dataset = matches.copy()\n",
     "for i, match in ma.diff_dataset.iterrows(): \n",
     "    match.season = '2022-2023'\n",
     "    avgH, c = ma.get_team_by_name(match.home).get_avg_last_X_matches(5, match.date, float_features_and_avg)\n",
@@ -188,8 +190,300 @@
     "    for col in float_features_and_avg:\n",
     "        diff = avgH[col] - avgA[col]\n",
     "        ma.diff_dataset.at[i, col] = diff\n",
+    "    \n",
+    "    ma.diff_dataset.at[i, 'prediction'] = label[match.prediction]\n",
     "\n",
-    "ma.diff_dataset"
+    "    ma.diff_dataset.at[i, 'home'] = ma.get_id_by_name(match.home)\n",
+    "    ma.diff_dataset.at[i, 'away'] = ma.get_id_by_name(match.away)\n",
+    "\n",
+    "ma.diff_dataset.drop(columns=['result', 'date'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ma.diff_dataset\n",
+    "dt = pickle.load(open('ML model/random forest 0.549.model', 'rb'))\n",
+    "predictions = dt.predict(ma.diff_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_predictions = pd.DataFrame()\n",
+    "for i, match in matches.iterrows():\n",
+    "    match['prediction'] = predictions[i]\n",
+    "    df_predictions = df_predictions.append(match[['home','away','prediction']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>home</th>\n",
+       "      <th>away</th>\n",
+       "      <th>date</th>\n",
+       "      <th>result</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>goals</th>\n",
+       "      <th>total_shots</th>\n",
+       "      <th>shots_on_target</th>\n",
+       "      <th>goals_on_penalty</th>\n",
+       "      <th>total_penalties</th>\n",
+       "      <th>percentage_possession</th>\n",
+       "      <th>fouls</th>\n",
+       "      <th>yellow_cards</th>\n",
+       "      <th>red_cards</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Juventus</td>\n",
+       "      <td>Empoli</td>\n",
+       "      <td>2022-10-21</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Salernitana</td>\n",
+       "      <td>Spezia</td>\n",
+       "      <td>2022-10-22</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fiorentina</td>\n",
+       "      <td>Inter</td>\n",
+       "      <td>2022-10-22</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>P</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Milan</td>\n",
+       "      <td>Monza</td>\n",
+       "      <td>2022-10-22</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Atalanta</td>\n",
+       "      <td>Lazio</td>\n",
+       "      <td>2022-10-23</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Bologna</td>\n",
+       "      <td>Lecce</td>\n",
+       "      <td>2022-10-23</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>P</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Roma</td>\n",
+       "      <td>Napoli</td>\n",
+       "      <td>2022-10-23</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>P</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Udinese</td>\n",
+       "      <td>Torino</td>\n",
+       "      <td>2022-10-23</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>P</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sassuolo</td>\n",
+       "      <td>Hellas Verona</td>\n",
+       "      <td>2022-10-24</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>P</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Cremonese</td>\n",
+       "      <td>Sampdoria</td>\n",
+       "      <td>2022-10-24</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          home           away       date result prediction  goals  \\\n",
+       "0     Juventus         Empoli 2022-10-21    nan          V    NaN   \n",
+       "1  Salernitana         Spezia 2022-10-22    nan          V    NaN   \n",
+       "2   Fiorentina          Inter 2022-10-22    nan          P    NaN   \n",
+       "3        Milan          Monza 2022-10-22    nan          V    NaN   \n",
+       "4     Atalanta          Lazio 2022-10-23    nan          N    NaN   \n",
+       "5      Bologna          Lecce 2022-10-23    nan          P    NaN   \n",
+       "6         Roma         Napoli 2022-10-23    nan          P    NaN   \n",
+       "7      Udinese         Torino 2022-10-23    nan          P    NaN   \n",
+       "8     Sassuolo  Hellas Verona 2022-10-24    nan          P    NaN   \n",
+       "9    Cremonese      Sampdoria 2022-10-24    nan          V    NaN   \n",
+       "\n",
+       "   total_shots  shots_on_target  goals_on_penalty  total_penalties  \\\n",
+       "0          NaN              NaN               NaN              NaN   \n",
+       "1          NaN              NaN               NaN              NaN   \n",
+       "2          NaN              NaN               NaN              NaN   \n",
+       "3          NaN              NaN               NaN              NaN   \n",
+       "4          NaN              NaN               NaN              NaN   \n",
+       "5          NaN              NaN               NaN              NaN   \n",
+       "6          NaN              NaN               NaN              NaN   \n",
+       "7          NaN              NaN               NaN              NaN   \n",
+       "8          NaN              NaN               NaN              NaN   \n",
+       "9          NaN              NaN               NaN              NaN   \n",
+       "\n",
+       "   percentage_possession  fouls  yellow_cards  red_cards  \n",
+       "0                    NaN    NaN           NaN        NaN  \n",
+       "1                    NaN    NaN           NaN        NaN  \n",
+       "2                    NaN    NaN           NaN        NaN  \n",
+       "3                    NaN    NaN           NaN        NaN  \n",
+       "4                    NaN    NaN           NaN        NaN  \n",
+       "5                    NaN    NaN           NaN        NaN  \n",
+       "6                    NaN    NaN           NaN        NaN  \n",
+       "7                    NaN    NaN           NaN        NaN  \n",
+       "8                    NaN    NaN           NaN        NaN  \n",
+       "9                    NaN    NaN           NaN        NaN  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_predictions"
    ]
   }
  ],
